Added authorization rules to the ClassroomController endpoints